@@ -1,0 +1,4 @@
+2020-07-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* ar-lib, compile, config.guess, config.rpath, config.sub,
+	depcomp, install-sh, missing: Moved here from parent directory.
