@@ -1,3 +1,8 @@
+2020-07-21         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* update-aux.sh: Adjust for presence of build-aux in main
+	directory.
+
 2019-06-18         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.0.1: Release tar ball made.
