@@ -1,6 +1,8 @@
 2020-07-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Update to 1.16.
+	* ar-lib, compile, config.guess, config.rpath, config.sub,
+	depcomp, install-sh, missing, ylwrap: Moved to build-aux.
 
 2020-07-20  gettextize  <bug-gnu-gettext@gnu.org>
 
